bugfix: corrected status settings and table overlapping issue

--- a/public/css/status.css
+++ b/public/css/status.css
@@ -8,7 +8,6 @@ section.status-dashboard {
 }
 
 div.status-settings {
-  height: 2.5rem;
   width: 100%;
   display: flex;
   align-items: center;
